home: Fixed issues because of a too large header

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -91,25 +91,6 @@
     }
 }
 
-.icon-card ~ .copied {
-    opacity: 0;
-
-    position: relative;
-    top: 24px;
-
-    transition-delay: 250ms;
-    transition-duration: 200ms;
-    transform: scale(1);
-}
-
-.icon-card:active ~ .copied {
-    opacity: 100%;
-    transition-delay: 0ms;
-    transition-duration: 0ms;
-    transform: scale(1.25);
-}
-
-
 // Hint
 .icon-card + .hint {
     @extend .card16;
@@ -130,6 +111,25 @@
 
 .icon-card:hover + .hint {
     opacity: 100%;
+}
+
+// Copied ! text
+.icon-card ~ .copied {
+    opacity: 0;
+
+    position: absolute;
+    top: #{48 * 2.5}px;
+
+    transition-delay: 250ms;
+    transition-duration: 200ms;
+    transform: scale(1);
+}
+
+.icon-card:active ~ .copied {
+    opacity: 100%;
+    transition-delay: 0ms;
+    transition-duration: 0ms;
+    transform: scale(1.25);
 }
 
 // --- Content ---
